# automake_example

./: .gitignore  COPYING  README  README.md  libvaapi.pc
src/: Makefile.am  add.h  decode-vaapi.c  decode-vaapi.h  del.c  del.h  main.c  mycxx.cpp  mycxx.h  resource.h  test.rc  usage.c  usage.h  win-floatbar.c  win-floatbar.h  win-png.cpp  win-png.h
